--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -17,7 +17,79 @@
   <body>
 
     <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+    <div class="container"> 
+    <header>
+      <nav>
+        <ul>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Vision</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><img src="img/logo.png" alt="Great Idea! Company logo."></li>
+        </ul>
+      </nav> 
+      <!-- <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."> -->
+    </header>
+<br>
+  <br><br>
+  <section class="first-section">
+    <br><br><br><br>
+    <div class="first-div inline-block">
+      <h1>INNOVATION<br> ON <br>DEMAND</h1>
+      <button>Get Started</button> 
+    </div>
+      <img src="img/header-img.png" alt="Image of a code snippet." class="inline-block">
+  </section><br>
+  
+  <!--   Section -->
+  <section class="second-section">
+   <div class="second-div-wrapper">
+     <br><br><br><br> <hr><br>
+    <div class="second-div">
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="second-div">
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+   </div><br><br>
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen"><br><br>
+
+  </section><br><br><br>
+  
+  <section class="third-section">
+    <div class="third-div">
+      <h2>Services</h2> 
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+    <div class="third-div">
+      <h2>Product</h2> 
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+    <div class="third-div">   
+      <h2>Vision</h2> 
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>  
+    <br><br><hr><br>
+   </section><br><br>
+
+    <div class="address">
+      <h2>Contact</h2> <br>    
+      123 Way 456 Street<br>
+      Somewhere, USA<br><br>
+      1 (888) 888-8888<br><br>
+      sales@greatidea.io<br>
+    </div><br><br><br>
+
+    <footer>
+      <p id="Copyright-text">Copyright Great Idea! 2018</p>
+      <br><br>
+    </footer> 
+  
+    </div> 
   </body>
 </html>
