--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -15,93 +15,97 @@
 </head>
 
 <body>
+ <div class="container"> 
+    <header>
+      <nav>
+        <ul>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Vision</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a></li>
+        </ul>
+      </nav> 
+      <!-- <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."> -->
+    </header>
+<br>
+  <br><br>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
+<section class="service-first-section"><br>
+	<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image"> <br><br>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+	<h2>Services</h2>
 
+	<p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+	<br><br><hr><br><br>
+</section>
 
-Services
+<section class="service-second-section">
+	<div class="left">
+	    <h3>Digital Design</h3>	
+	    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+		eleifend. Mauris euismod facilisis iaculis.</p>
+	    <button>Learn More</button>
+	</div>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+	<div class="right">
+		<h3>UX / UI</h3>
+		<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+		eleifend. Mauris euismod facilisis iaculis.</p>
+		<button>Learn More</button>
+	</div>
+	
+	<div class="left">
+		<h3>Digital Marketing</h3>
+		<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+		eleifend. Mauris euismod facilisis iaculis.</p>
+		<button>Learn More</button>
+	</div>
 
+	<div class="right">
+		<h3>Web Development</h3>
+		<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+		eleifend. Mauris euismod facilisis iaculis.</p>
+		<button>Learn More</button>
+	</div>
 
-Digital Design
+	<div class="left">
+		<h3>iOS Development</h3>
+		<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+		eleifend. Mauris euismod facilisis iaculis.</p>
+		<button>Learn More</button>
+	</div>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+	<div class="right">
+		<h3>Android Development</h3>
+		<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+		<button>Learn More</button>
+	</div>
+</section>
 
-Learn More
+	<section class="service-third-section ">
+		<div class="left">
+			<h3>Some Facts About Our Services</h3><br>
+			<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+			eleifend. Mauris euismod facilisis iaculis.</p><br>
+			<ul>
+				<li>Awesome thing</li><br>
+				<li>Amazing thing</li><br>
+				<li>Cool thing</li><br>
+				<li>Great thing</li><br>
+			</ul>
+		</div>
+		<img class="services-info-img right" src="img/services-info.png" alt="one of our employees hard at work">
+	</section>
 
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
+	<footer>
+		<p>Copyright Great Idea! 2018</p>
+	</footer>
+ </div>
 </body>
 
 </html>
